--- a/Hiwjcn.Framework/Hiwjcn.Framework.csproj
+++ b/Hiwjcn.Framework/Hiwjcn.Framework.csproj
@@ -132,6 +132,7 @@
     <Compile Include="AttributeBundle.cs" />
     <Compile Include="CommonDependencyRegister.cs" />
     <Compile Include="DataBaseInitData.cs" />
+    <Compile Include="Extension\UserActivityExtension.cs" />
     <Compile Include="Factory\ActorsFactory.cs" />
     <Compile Include="Provider\AuthLocalValidationProvider.cs" />
     <Compile Include="Provider\AuthTokenToUserService.cs" />
