--- a/WindowsFormApp/WindowsFormApp.csproj
+++ b/WindowsFormApp/WindowsFormApp.csproj
@@ -150,6 +150,12 @@
     <Compile Include="MakeSign.Designer.cs">
       <DependentUpon>MakeSign.cs</DependentUpon>
     </Compile>
+    <Compile Include="Menus.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="Menus.Designer.cs">
+      <DependentUpon>Menus.cs</DependentUpon>
+    </Compile>
     <Compile Include="mq.cs">
       <SubType>Form</SubType>
     </Compile>
@@ -197,8 +203,14 @@
     <EmbeddedResource Include="MakeSign.resx">
       <DependentUpon>MakeSign.cs</DependentUpon>
     </EmbeddedResource>
+    <EmbeddedResource Include="Menus.resx">
+      <DependentUpon>Menus.cs</DependentUpon>
+    </EmbeddedResource>
     <EmbeddedResource Include="mq.resx">
       <DependentUpon>mq.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="NettyClient.resx">
+      <DependentUpon>NettyClient.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="NettyServer.resx">
       <DependentUpon>NettyServer.cs</DependentUpon>
