--- a/Hiwjcn.Web/App_Data/Config/log4net.config
+++ b/Hiwjcn.Web/App_Data/Config/log4net.config
@@ -10,6 +10,7 @@
       <appender-ref ref="ERROR_FILE" />
       <appender-ref ref="INFO_FILE" />
       <appender-ref ref="WARN_FILE" />
+      <appender-ref ref="SentryAppender" />
       <!--<appender-ref ref="ERROR_ES" />-->
     </root>
     <!--业务相关的日志-->
@@ -17,7 +18,21 @@
       <level value="INFO" />
       <appender-ref ref="B_FILE" />
       <!--<appender-ref ref="AdoNetAppender" />-->
+      <appender-ref ref="ERROR_FILE" />
+      <appender-ref ref="INFO_FILE" />
+      <appender-ref ref="WARN_FILE" />
+      <appender-ref ref="SentryAppender" />
+      <!--<appender-ref ref="ERROR_ES" />-->
     </logger>
+    <!--Sentry-->
+    <appender name="SentryAppender" type="SharpRaven.Log4Net.SentryAppender, SharpRaven.Log4Net">
+      <DSN value="https://ff67bd10eaf6409b8c8f1363afd24891:079ecf7e5978425981b7d30bc5e03736@sentry.io/147755" />
+      <Logger value="WebLogger" />
+      <threshold value="ERROR" />
+      <layout type="log4net.Layout.PatternLayout">
+        <conversionPattern value="%5level - %message%newline" />
+      </layout>
+    </appender>
     <!--错误-->
     <appender name="ERROR_FILE" type="log4net.Appender.RollingFileAppender">
       <param name="AppendToFile" value="true" />
