--- a/Lib/Lib.csproj
+++ b/Lib/Lib.csproj
@@ -301,6 +301,7 @@
     <Compile Include="mvc\auth\AuthExtension.cs" />
     <Compile Include="mvc\auth\AuthServerApiCaller.cs" />
     <Compile Include="mvc\auth\AuthServerConfig.cs" />
+    <Compile Include="mvc\auth\IAuthApi.cs" />
     <Compile Include="mvc\auth\ModelSet.cs" />
     <Compile Include="mvc\auth\validation\ITokenValidationProvider.cs" />
     <Compile Include="mvc\auth\validation\IValidationDataProvider.cs" />
