--- a/Hiwjcn.Framework/Hiwjcn.Framework.csproj
+++ b/Hiwjcn.Framework/Hiwjcn.Framework.csproj
@@ -134,6 +134,7 @@
     <Compile Include="DataBaseInitData.cs" />
     <Compile Include="Extension\UserActivityExtension.cs" />
     <Compile Include="Factory\ActorsFactory.cs" />
+    <Compile Include="Provider\AuthApiService.cs" />
     <Compile Include="Provider\AuthLocalValidationProvider.cs" />
     <Compile Include="Provider\AuthTokenToUserService.cs" />
     <Compile Include="Provider\IAuthTokenToUserService.cs" />
