--- a/WindowsFormApp/App.config
+++ b/WindowsFormApp/App.config
@@ -29,8 +29,14 @@
     </logger>
   </log4net>
   <connectionStrings>
-    <add name="MySqlConnectionString" connectionString="Database=hiwjcn;Data Source=127.0.0.1;Port=3306;CharacterSet=utf8;User Id=root;Password=123" />
-    <add name="RedisConnectionString" connectionString="172.16.42.28:6379,password=1q2w3e4r5T" />
+    <add name="db_" connectionString="database=hiwjcn_auth;server=127.0.0.1;port=3306;characterset=utf8;user id=root;password=123;connectiontimeout=3" />
+    <!--auth数据库-->
+    <add name="db" connectionString="User ID=sa;Initial Catalog=parties_auth;Data Source=db.qipeilong.net;Password=1q2w3e4r5T;Connect Timeout=20" />
+    <!--parties数据库-->
+    <add name="db_parties" connectionString="User ID=sa;Initial Catalog=parties;Data Source=db.qipeilong.net;Password=1q2w3e4r5T;Connect Timeout=20" />
+    <add name="db_sso" connectionString="User ID=sa;Initial Catalog=parties_sso;Data Source=db.qipeilong.net;Password=1q2w3e4r5T;Connect Timeout=20" />
+    <add name="RedisConnectionString" connectionString="redis.qipeilong.net:6479" />
+    <add name="ES" connectionString="http://es.qipeilong.net:9200/" />
   </connectionStrings>
   <abot>
     <crawlBehavior maxConcurrentThreads="10" maxPagesToCrawl="99999999" maxPagesToCrawlPerDomain="0" maxPageSizeInBytes="0" userAgentString="Mozilla/5.0 (Windows NT 6.3; Trident/7.0; rv:11.0) like Gecko" crawlTimeoutSeconds="0" downloadableContentTypes="text/html, text/plain" isUriRecrawlingEnabled="false" isExternalPageCrawlingEnabled="false" isExternalPageLinksCrawlingEnabled="false" httpServicePointConnectionLimit="200" httpRequestTimeoutInSeconds="15" httpRequestMaxAutoRedirects="7" isHttpRequestAutoRedirectsEnabled="true" isHttpRequestAutomaticDecompressionEnabled="false" isSendingCookiesEnabled="false" isSslCertificateValidationEnabled="false" isRespectUrlNamedAnchorOrHashbangEnabled="false" minAvailableMemoryRequiredInMb="0" maxMemoryUsageInMb="0" maxMemoryUsageCacheTimeInSeconds="0" maxCrawlDepth="100" maxLinksPerPage="1000" isForcedLinkParsingEnabled="false" maxRetryCount="3" minRetryDelayInMilliseconds="0" />
@@ -67,4 +73,14 @@
       </dependentAssembly>
     </assemblyBinding>
   </runtime>
+  <system.serviceModel>
+    <bindings>
+      <basicHttpBinding>
+        <binding name="BasicHttpBinding_IAuthApiService" />
+      </basicHttpBinding>
+    </bindings>
+    <client>
+      <endpoint address="http://localhost:59840/Service/AuthApiService.svc" binding="basicHttpBinding" bindingConfiguration="BasicHttpBinding_IAuthApiService" contract="AuthWebService.IAuthApiService" name="BasicHttpBinding_IAuthApiService" />
+    </client>
+  </system.serviceModel>
 </configuration>
