--- a/WindowsFormApp/packages.config
+++ b/WindowsFormApp/packages.config
@@ -2,6 +2,7 @@
 <packages>
   <package id="Abot" version="1.5.1.53" targetFramework="net45" />
   <package id="AngleSharp" version="0.9.8.1" targetFramework="net45" />
+  <package id="Autofac" version="3.5.2" targetFramework="net45" />
   <package id="AutoMapper" version="3.3.1" targetFramework="net45" />
   <package id="CsQuery" version="1.3.4" targetFramework="net45" />
   <package id="DotNetty.Buffers" version="0.4.6" targetFramework="net45" />
