--- a/Hiwjcn.Test/packages.config
+++ b/Hiwjcn.Test/packages.config
@@ -17,4 +17,5 @@
   <package id="StackExchange.Redis" version="1.2.1" targetFramework="net45" />
   <package id="System.Runtime" version="4.0.0" targetFramework="net45" />
   <package id="System.ValueTuple" version="4.3.0" targetFramework="net45" />
+  <package id="ZooKeeper.Net" version="3.4.6.2" targetFramework="net45" />
 </packages>
