--- a/Hiwjcn.Test/app.config
+++ b/Hiwjcn.Test/app.config
@@ -7,7 +7,7 @@
     <section name="entityFramework" type="System.Data.Entity.Internal.ConfigFile.EntityFrameworkSection, EntityFramework, Version=6.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" requirePermission="false" />
   </configSections>
   <rabbitmq HostName="172.16.42.29" UserName="admin" Password="mypass" VirtualHost="/" />
-  <lib_zookeeper SessionTimeOut="5000" Server="es.qipeilong.net:2181" MasterSlavePath="/" DistributedLockPath="/lock" />
+  <lib_zookeeper SessionTimeOut="5000" Server="mq.qipeilong.net:2181" MasterSlavePath="/" DistributedLockPath="/lock" />
   <appSettings>
     <add key="webpages:Version" value="3.0.0.0" />
     <add key="webpages:Enabled" value="false" />
