--- a/Lib/Lib.csproj
+++ b/Lib/Lib.csproj
@@ -299,6 +299,7 @@
     <Compile Include="mvc\attr\ValidCSRFAttribute.cs" />
     <Compile Include="mvc\attr\_ActionFilterBaseAttribute.cs" />
     <Compile Include="mvc\auth\AuthExtension.cs" />
+    <Compile Include="mvc\auth\AuthHelper.cs" />
     <Compile Include="mvc\auth\AuthServerConfig.cs" />
     <Compile Include="mvc\auth\IAuthApi.cs" />
     <Compile Include="mvc\auth\ModelSet.cs" />
