--- a/WindowsFormApp/packages.config
+++ b/WindowsFormApp/packages.config
@@ -1,7 +1,7 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
-  <package id="Abot" version="1.5.1.53" targetFramework="net45" />
-  <package id="AngleSharp" version="0.9.8.1" targetFramework="net45" />
+  <package id="Abot" version="1.5.1.69" targetFramework="net45" />
+  <package id="AngleSharp" version="0.9.9" targetFramework="net45" />
   <package id="Autofac" version="3.5.2" targetFramework="net45" />
   <package id="AutoMapper" version="3.3.1" targetFramework="net45" />
   <package id="CsQuery" version="1.3.4" targetFramework="net45" />
@@ -10,13 +10,15 @@
   <package id="DotNetty.Common" version="0.4.6" targetFramework="net45" />
   <package id="DotNetty.Transport" version="0.4.6" targetFramework="net45" />
   <package id="HtmlAgilityPack" version="1.4.9" targetFramework="net45" />
-  <package id="log4net" version="2.0.3" targetFramework="net45" />
+  <package id="log4net" version="2.0.7" targetFramework="net45" />
+  <package id="Microsoft.Bcl" version="1.1.10" targetFramework="net45" />
+  <package id="Microsoft.Bcl.Build" version="1.0.21" targetFramework="net45" />
   <package id="Microsoft.Extensions.DependencyInjection.Abstractions" version="1.1.0" targetFramework="net45" />
   <package id="Microsoft.Extensions.Logging" version="1.1.1" targetFramework="net45" />
   <package id="Microsoft.Extensions.Logging.Abstractions" version="1.1.1" targetFramework="net45" />
   <package id="Microsoft.NETCore.Platforms" version="1.1.0" targetFramework="net45" />
   <package id="NETStandard.Library" version="1.6.1" targetFramework="net45" />
-  <package id="NRobotsPatched" version="1.0.5.0" targetFramework="net45" />
+  <package id="NRobotsPatched" version="1.0.8.0" targetFramework="net45" />
   <package id="RabbitMQ.Client" version="3.6.6" targetFramework="net45" />
   <package id="StackExchange.Redis" version="1.2.0" targetFramework="net45" />
   <package id="System.Collections" version="4.3.0" targetFramework="net45" />
