--- a/Hiwjcn.Web/Views/Web.config
+++ b/Hiwjcn.Web/Views/Web.config
@@ -11,7 +11,7 @@
   <system.web.webPages.razor>
     <host factoryType="System.Web.Mvc.MvcWebRazorHostFactory, System.Web.Mvc, Version=5.0.0.0, Culture=neutral, PublicKeyToken=31BF3856AD364E35" />
     <!--使用自定义的模板引擎-->
-    <pages pageBaseType="Lib.mvc.MyWebViewPage,Lib">
+    <pages pageBaseType="Lib.mvc.MyWebViewPage">
       <namespaces>
         <add namespace="System.Web.Mvc" />
         <add namespace="System.Web.Mvc.Ajax" />
