--- a/Hiwjcn.Web/Web.config
+++ b/Hiwjcn.Web/Web.config
@@ -86,7 +86,8 @@
     <!--15天-->
     <add key="CookieExpiresMinutes" value="21600" />
     <add key="CacheExpiresMinutes" value="1" />
-
+    <!--账号体系UserInfo/SalesInfo-->
+    <add key="account_system" value="UserInfo"/>
     <add key="auth.client_id" value="auth.official.client.id" />
     <add key="auth.client_security" value="auth.official.client.security" />
   </appSettings>
