--- a/Lib/Lib.csproj
+++ b/Lib/Lib.csproj
@@ -216,6 +216,7 @@
     <Compile Include="core\MimeTypes.cs" />
     <Compile Include="core\MyStringComparer.cs" />
     <Compile Include="core\LibReleaseHelper.cs" />
+    <Compile Include="core\ResultBase.cs" />
     <Compile Include="core\StoreInstanceDict.cs" />
     <Compile Include="core\ThreadWrapper.cs" />
     <Compile Include="data\AntiBadRetry.cs" />
