--- a/Hiwjcn.Test/packages.config
+++ b/Hiwjcn.Test/packages.config
@@ -7,6 +7,9 @@
   <package id="EntityFramework" version="6.1.3" targetFramework="net45" />
   <package id="HtmlAgilityPack" version="1.4.9.5" targetFramework="net45" />
   <package id="log4net" version="1.2.10" targetFramework="net45" />
+  <package id="MongoDB.Bson" version="2.4.4" targetFramework="net45" />
+  <package id="MongoDB.Driver" version="2.4.4" targetFramework="net45" />
+  <package id="MongoDB.Driver.Core" version="2.4.4" targetFramework="net45" />
   <package id="MySql.Data" version="6.9.9" targetFramework="net45" />
   <package id="NEST" version="5.2.0" targetFramework="net45" />
   <package id="Newtonsoft.Json" version="9.0.1" targetFramework="net45" />
@@ -16,6 +19,7 @@
   <package id="RabbitMQ.Client" version="3.6.6" targetFramework="net45" />
   <package id="StackExchange.Redis" version="1.2.1" targetFramework="net45" />
   <package id="System.Runtime" version="4.3.0" targetFramework="net45" />
+  <package id="System.Runtime.InteropServices.RuntimeInformation" version="4.0.0" targetFramework="net45" />
   <package id="System.ValueTuple" version="4.3.1" targetFramework="net45" />
   <package id="ZooKeeper.Net" version="3.4.6.2" targetFramework="net45" />
 </packages>
