--- a/Hiwjcn.Framework/packages.config
+++ b/Hiwjcn.Framework/packages.config
@@ -13,6 +13,7 @@
   <package id="Microsoft.Web.Infrastructure" version="1.0.0.0" targetFramework="net45" />
   <package id="MySql.Data" version="6.9.9" targetFramework="net45" />
   <package id="Newtonsoft.Json" version="9.0.1" targetFramework="net45" />
+  <package id="Polly" version="5.3.1" targetFramework="net45" />
   <package id="Quartz" version="2.5.0" targetFramework="net45" />
   <package id="StackExchange.Redis" version="1.2.1" targetFramework="net45" />
   <package id="System.Collections.Immutable" version="1.3.1" targetFramework="net45" />
