--- a/Lib/Lib.csproj
+++ b/Lib/Lib.csproj
@@ -309,7 +309,7 @@
     <Compile Include="mvc\plugin\BasePaymentController.cs" />
     <Compile Include="mvc\plugin\BasePluginController.cs" />
     <Compile Include="mvc\RequestHelper.cs" />
-    <Compile Include="mvc\ResponseHelper.cs" />
+    <Compile Include="mvc\ResponseExtension.cs" />
     <Compile Include="mvc\ServerHelper.cs" />
     <Compile Include="mvc\SessionExtension.cs" />
     <Compile Include="data\IRepository.cs" />
