--- a/Hiwjcn.Test/packages.config
+++ b/Hiwjcn.Test/packages.config
@@ -22,4 +22,5 @@
   <package id="System.Runtime.InteropServices.RuntimeInformation" version="4.0.0" targetFramework="net45" />
   <package id="System.ValueTuple" version="4.3.1" targetFramework="net45" />
   <package id="ZooKeeper.Net" version="3.4.6.2" targetFramework="net45" />
+  <package id="ZooKeeperNetEx" version="3.4.9.4" targetFramework="net45" />
 </packages>
