--- a/Lib/packages.config
+++ b/Lib/packages.config
@@ -28,6 +28,6 @@
   <package id="System.Collections.Immutable" version="1.3.1" targetFramework="net45" />
   <package id="System.Runtime" version="4.3.0" targetFramework="net45" />
   <package id="System.ValueTuple" version="4.3.1" targetFramework="net45" />
-  <package id="ZooKeeper.Net" version="3.4.6.2" targetFramework="net45" />
+  <package id="ZooKeeperNetEx" version="3.4.9.4" targetFramework="net45" />
   <package id="ZXing" version="2.1.1" targetFramework="net45" />
 </packages>
