--- a/Hiwjcn.Web/Web.config
+++ b/Hiwjcn.Web/Web.config
@@ -90,6 +90,8 @@
     <add key="account_system" value="UserInfo" />
     <add key="auth.client_id" value="auth.official.client.id" />
     <add key="auth.client_security" value="auth.official.client.security" />
+    <!--TraderServiceUrl-->
+    <add key="TraderServiceUrl" value="http://service.qipeilong.net:9006/wsTraderAccess/TraderAccess.svc" />
   </appSettings>
   <system.web>
     <httpRuntime requestValidationMode="2.0" targetFramework="4.5" />
