--- a/Hiwjcn.Web/Web.config
+++ b/Hiwjcn.Web/Web.config
@@ -86,8 +86,8 @@
     <!--15天-->
     <add key="CookieExpiresMinutes" value="21600" />
     <add key="CacheExpiresMinutes" value="1" />
-    <!--账号体系UserInfo/SalesInfo(切换请一定要修改相应的auth数据库链接字符串！！！)-->
-    <add key="account_system" value="UserInfo" />
+    <!--账号体系UserInfo/SalesInfo/TraderAccess(切换请一定要修改相应的auth数据库链接字符串！！！)-->
+    <add key="account_system" value="TraderAccess" />
     <add key="auth.client_id" value="auth.official.client.id" />
     <add key="auth.client_security" value="auth.official.client.security" />
     <!--TraderServiceUrl-->
