--- a/Lib/Lib.csproj
+++ b/Lib/Lib.csproj
@@ -270,6 +270,7 @@
     <Compile Include="helper\HtmlHelper.cs" />
     <Compile Include="helper\ReflectionHelper.cs" />
     <Compile Include="infrastructure\ServiceBase.cs" />
+    <Compile Include="ioc\AppContextExtension.cs" />
     <Compile Include="ioc\BaseDependencyRegistrar.cs" />
     <Compile Include="ioc\DependencyRegistrarBase.cs" />
     <Compile Include="ioc\IAutoRegistered.cs" />
