--- a/Lib/Lib.csproj
+++ b/Lib/Lib.csproj
@@ -282,9 +282,10 @@
     <Compile Include="mq\MessageConsumer.cs" />
     <Compile Include="mq\MessageConsumerBase.cs" />
     <Compile Include="mq\MessageProducer.cs" />
-    <Compile Include="mq\MqExtension.cs" />
+    <Compile Include="mq\MessageQueueExtension.cs" />
     <Compile Include="mq\RabbitMQChannel.cs" />
     <Compile Include="mq\RabbitMQClient.cs" />
+    <Compile Include="mq\RabbitMQConnection.cs" />
     <Compile Include="mq\RabbitMQExtension.cs" />
     <Compile Include="mq\RabbitMQSection.cs" />
     <Compile Include="mvc\attr\AntiReSubmitAttribute.cs" />
