--- a/Hiwjcn.Service/packages.config
+++ b/Hiwjcn.Service/packages.config
@@ -3,22 +3,23 @@
   <package id="Autofac" version="4.6.2" targetFramework="net45" />
   <package id="Autofac.Extras.DynamicProxy" version="4.2.1" targetFramework="net45" />
   <package id="Autofac.Mvc5" version="4.0.2" targetFramework="net45" />
-  <package id="Castle.Core" version="4.0.0" targetFramework="net45" />
-  <package id="Common.Logging" version="3.3.1" targetFramework="net45" />
-  <package id="Common.Logging.Core" version="3.3.1" targetFramework="net45" />
+  <package id="Castle.Core" version="4.2.1" targetFramework="net45" />
+  <package id="Common.Logging" version="3.4.1" targetFramework="net45" />
+  <package id="Common.Logging.Core" version="3.4.1" targetFramework="net45" />
   <package id="Dapper" version="1.50.2" targetFramework="net45" />
   <package id="EntityFramework" version="6.1.3" targetFramework="net45" />
   <package id="HtmlAgilityPack" version="1.4.9.5" targetFramework="net45" />
   <package id="Microsoft.AspNet.Mvc" version="5.2.3" targetFramework="net45" />
   <package id="Microsoft.AspNet.Razor" version="3.2.3" targetFramework="net45" />
   <package id="Microsoft.AspNet.WebPages" version="3.2.3" targetFramework="net45" />
+  <package id="Microsoft.CSharp" version="4.4.0" targetFramework="net45" />
   <package id="Microsoft.Web.Infrastructure" version="1.0.0.0" targetFramework="net45" />
   <package id="Newtonsoft.Json" version="9.0.1" targetFramework="net45" />
   <package id="Polly" version="5.3.1" targetFramework="net45" />
   <package id="Qiniu.Shared" version="7.2.15" targetFramework="net45" />
   <package id="QPL.WebService.TraderAccess.Core" version="1.0.4.1" targetFramework="net45" />
   <package id="Quartz" version="2.6.1" targetFramework="net45" />
-  <package id="StackExchange.Redis" version="1.2.1" targetFramework="net45" />
+  <package id="StackExchange.Redis" version="1.2.6" targetFramework="net45" />
   <package id="System.Runtime" version="4.3.0" targetFramework="net45" />
   <package id="System.ValueTuple" version="4.4.0" targetFramework="net45" />
 </packages>
