--- a/Lib/packages.config
+++ b/Lib/packages.config
@@ -5,18 +5,19 @@
   <package id="Autofac.Extras.DynamicProxy" version="4.2.1" targetFramework="net45" />
   <package id="Autofac.Mvc5" version="4.0.2" targetFramework="net45" />
   <package id="Castle.Core" version="4.2.1" targetFramework="net45" />
-  <package id="Common.Logging" version="3.3.1" targetFramework="net45" />
-  <package id="Common.Logging.Core" version="3.3.1" targetFramework="net45" />
+  <package id="Common.Logging" version="3.4.1" targetFramework="net45" />
+  <package id="Common.Logging.Core" version="3.4.1" targetFramework="net45" />
   <package id="Dapper" version="1.50.2" targetFramework="net45" />
   <package id="Elasticsearch.Net" version="2.4.6" targetFramework="net45" />
   <package id="EntityFramework" version="6.1.3" targetFramework="net45" />
   <package id="ImageProcessor" version="2.5.6" targetFramework="net45" />
-  <package id="log4net" version="2.0.7" targetFramework="net45" />
+  <package id="log4net" version="2.0.8" targetFramework="net45" />
   <package id="Microsoft.AspNet.Mvc" version="5.2.3" targetFramework="net45" />
   <package id="Microsoft.AspNet.Razor" version="3.2.3" targetFramework="net45" />
   <package id="Microsoft.AspNet.WebPages" version="3.2.3" targetFramework="net45" />
+  <package id="Microsoft.CSharp" version="4.4.0" targetFramework="net45" />
   <package id="Microsoft.Web.Infrastructure" version="1.0.0.0" targetFramework="net45" />
-  <package id="MySql.Data" version="6.9.9" targetFramework="net45" />
+  <package id="MySql.Data" version="6.9.10" targetFramework="net45" />
   <package id="NEST" version="2.4.6" targetFramework="net45" />
   <package id="Newtonsoft.Json" version="9.0.1" targetFramework="net45" />
   <package id="NPOI" version="2.3.0" targetFramework="net45" />
