--- a/Hiwjcn.Test/app.config
+++ b/Hiwjcn.Test/app.config
@@ -3,9 +3,9 @@
   <configSections>
     <section name="lib_zookeeper" type="Lib.distributed.ZooKeeperConfigSection,Lib" />
     <section name="rabbitmq" type="Lib.mq.RabbitMQSection,Lib" />
-    <!-- For more information on Entity Framework configuration, visit http://go.microsoft.com/fwlink/?LinkID=237468 -->
+    
     <section name="entityFramework" type="System.Data.Entity.Internal.ConfigFile.EntityFrameworkSection, EntityFramework, Version=6.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" requirePermission="false" />
-  </configSections>
+  <!-- For more information on Entity Framework configuration, visit http://go.microsoft.com/fwlink/?LinkID=237468 --></configSections>
   <rabbitmq HostName="172.16.42.29" UserName="admin" Password="mypass" VirtualHost="/" />
   <lib_zookeeper SessionTimeOut="500000" Server="es.qipeilong.net:2181" MasterSlavePath="/" DistributedLockPath="/lock" />
   <appSettings>
