--- a/Hiwjcn.Web/Web.config
+++ b/Hiwjcn.Web/Web.config
@@ -44,24 +44,19 @@
     <add key="webpages:Enabled" value="false" />
     <add key="ClientValidationEnabled" value="true" />
     <add key="UnobtrusiveJavaScriptEnabled" value="true" />
-
     <add key="LoadPlugin" value="true=" />
-
     <add key="disable_timestamp_check" value="true" />
     <add key="sign_key" value="cqmyg-ysdss-jtwmy-dtsgx" />
-
     <add key="CookieDomain" value="" />
     <!--允许跨域ajax的域名-->
     <add key="Origin_Allow" value="local" />
     <!--域名用逗号隔开-->
     <add key="AllowDomains" value="" />
-
     <add key="SmptServer" value="smtp.epcservices.com.cn" />
     <add key="SmptLoginName" value="reception@epcservices.com.cn" />
     <add key="SmptPassWord" value="Colin5215" />
     <add key="SmptSenderName" value="EPC_WEBSITE" />
     <add key="SmptEmailAddress" value="reception@epcservices.com.cn" />
-
     <add key="FeedBackEmail" value="reception@epcservices.com.cn" />
     <!--SSO登录地址-->
     <add key="SSOLoginUrl" value="http://localhost:51735/sso/login/" />
@@ -77,12 +72,10 @@
     <add key="SSO_CONTINUE_URL" value="" />
     <!--指定服务器跳转，还是把跳转地址返回给前端跳转-->
     <add key="SSO_NO_LOGIN_RESULT_FOR_INTERFACE" value="" />
-
     <add key="QiniuAccessKey" value="IJ0GgfyMaCR_k-4yOVX6Ji_LImhMxjcnvOz2zBNP" />
     <add key="QiniuSecretKey" value="Kk5-w2nxc1b_MpjhC4ocPr9jfK36O11vaGVEY6hD" />
     <add key="QiniuBucketName" value="hiwjcn" />
     <add key="QiniuBaseUrl" value="http://hiwjcn.qiniudn.com/" />
-
     <!--15天-->
     <add key="CookieExpiresMinutes" value="21600" />
     <add key="CacheExpiresMinutes" value="1" />
@@ -119,7 +112,6 @@
         <!--使用mysql保存session，使用mysql.web组件（安装此组建会自动添加很多配置节点，只要保留下面节点就可以了）-->
         <!--http://dev.mysql.com/downloads/connector/net/ 选择source code下载-->
         <add name="MySqlSessionProvider" type="Lib.mvc.MySQLSessionProvider,Lib" AppID="1024" />
-
         <!--也可以使用redis存储session，组件：RedisSessionStateProvider-->
         <!-- https://github.com/Azure/aspnet-redis-providers/wiki -->
         <!-- https://www.nuget.org/packages/Microsoft.Web.RedisSessionStateProvider/ -->
@@ -221,9 +213,20 @@
     </behaviors>
     <serviceHostingEnvironment aspNetCompatibilityEnabled="true" multipleSiteBindingsEnabled="true" minFreeMemoryPercentageToActivateService="0" />
   </system.serviceModel>
-<system.data>
+  <system.data>
     <DbProviderFactories>
       <remove invariant="MySql.Data.MySqlClient" />
       <add name="MySQL Data Provider" invariant="MySql.Data.MySqlClient" description=".Net Framework Data Provider for MySQL" type="MySql.Data.MySqlClient.MySqlClientFactory, MySql.Data, Version=6.9.10.0, Culture=neutral, PublicKeyToken=c5687fc88969c44d" />
     </DbProviderFactories>
-  </system.data></configuration>
+  </system.data>
+  <entityFramework>
+    <defaultConnectionFactory type="System.Data.Entity.Infrastructure.LocalDbConnectionFactory, EntityFramework">
+      <parameters>
+        <parameter value="mssqllocaldb" />
+      </parameters>
+    </defaultConnectionFactory>
+    <providers>
+      <provider invariantName="System.Data.SqlClient" type="System.Data.Entity.SqlServer.SqlProviderServices, EntityFramework.SqlServer" />
+    </providers>
+  </entityFramework>
+</configuration>
