--- a/Lib/packages.config
+++ b/Lib/packages.config
@@ -30,5 +30,5 @@
   <package id="System.Runtime" version="4.3.0" targetFramework="net45" />
   <package id="System.ValueTuple" version="4.4.0" targetFramework="net45" />
   <package id="ZooKeeperNetEx" version="3.4.10.1" targetFramework="net45" />
-  <package id="ZXing" version="2.1.1" targetFramework="net45" />
+  <package id="ZXing.Net" version="0.16.2" targetFramework="net45" />
 </packages>
