--- a/Lib/Lib.csproj
+++ b/Lib/Lib.csproj
@@ -276,15 +276,12 @@
     <Compile Include="log\ESLogHelper.cs" />
     <Compile Include="mq\IMessageQueueConsumer.cs" />
     <Compile Include="mq\IMessageQueueProducer.cs" />
-    <Compile Include="mq\MessageConsumer.cs" />
-    <Compile Include="mq\MessageConsumerBase.cs" />
-    <Compile Include="mq\MessageProducer.cs" />
+    <Compile Include="mq\rabbitmq\RabbitMqConsumerBase.cs" />
+    <Compile Include="mq\rabbitmq\RabbitMqProducer.cs" />
     <Compile Include="mq\MessageQueueCore.cs" />
     <Compile Include="mq\MessageQueueExtension.cs" />
-    <Compile Include="mq\rabbitmq\RabbitMQChannel.cs" />
-    <Compile Include="mq\rabbitmq\RabbitMQClient.cs" />
+    <Compile Include="mq\rabbitmq\RabbitMqClient.cs" />
     <Compile Include="mq\rabbitmq\RabbitMQConfig.cs" />
-    <Compile Include="mq\rabbitmq\RabbitMQExtension.cs" />
     <Compile Include="mvc\attr\AntiReSubmitAttribute.cs" />
     <Compile Include="mvc\attr\ApiExpireAtAttribute.cs" />
     <Compile Include="mvc\attr\CheckReferrerUrlAttribute.cs" />
