--- a/Lib/Lib.csproj
+++ b/Lib/Lib.csproj
@@ -382,6 +382,7 @@
     <None Include="job_scheduling_data_2_0.xsd">
       <SubType>Designer</SubType>
     </None>
+    <None Include="Lib.nuspec" />
     <None Include="packages.config" />
     <None Include="ReadMe.md" />
   </ItemGroup>
